--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shivam Anand Homepage</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/glightbox.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
+</head>
+<body class="hero-body">
+    <header class="hero-body">
+        <section class="hero-image-box">
+            <img src="img/gm13.jpg" alt="Image" class="hero-img">
+        </section>
+        <nav class="nav-bar hero-nav">
+            <h1 class="logo"><a href="index.html">Shivam Anand</a></h1>
+            <ul class="nav-menu">
+                <li class="nav-item"><a href="protfolio.html">Portfolio</a></li>
+                <li class="nav-item"><a href="shop.html">shop</a></li>
+                <li class="nav-item"><a href="about.html">about</a></li>
+                <li class="nav-item social-nav-item">
+                    <a href="https://twitter.com/An_Shivam33" aria-label="Link to Twitter">
+                        <i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
+                    </li>
+                <li class="nav-item social-nav-item">
+                    <a href="https://github.com/33Shivam" aria-label="Link to Github">
+                            <i class="fa-brands fa-github" aria-hidden="true"></i></a>
+                        </li>
+                <li class="nav-item social-nav-item">
+                    <a href="https://www.linkedin.com/in/shivam-anand-55779b229/" aria-label="Link To linkedin">
+                                <i class="fa-brands fa-linkedin" aria-hidden="true"></i></a>
+                            </li>
+                </li>
+            </ul>
+        </nav>
+        <section class="hero-text-box">
+            <h1 class="hero-heading">Creativity like an ocean
+                <p class="hero-text">Surf on wid Shivam Anand</p>
+                <p><button class="hero button">View Protfolio </button></p>
+            </h1>
+        </section>
+    </header>
+    <footer>
+        <nav class="nav-bar footer-nav">            
+            <ul class="nav-menu">
+                <li class="nav-item"><a href="protfolio.html">Portfolio</a></li>
+                <li class="nav-item"><a href="shop.html">shop</a></li>
+                <li class="nav-item"><a href="about.html">about</a></li>
+                <h1 class="nav-item logo footer-logo"><a href="index.html">Shivam Anand</a></h1>
+</ul>
+</nav>
+<section class="footer">
+    <a href="https://twitter.com/An_Shivam33" aria-label="Link to Twitter">
+        <i class="fa-brands fa-twitter" aria-hidden="true"></i></a>  
 
+    <a href="https://github.com/33Shivam" aria-label="Link to Github">
+            <i class="fa-brands fa-github" aria-hidden="true"></i></a>       
+
+    <a href="https://www.linkedin.com/in/shivam-anand-55779b229/" aria-label="Link To linkedin">
+                <i class="fa-brands fa-linkedin" aria-hidden="true"></i></a>
+
+</section>
+<p class="footer-copyright">Copyright &copy; 2020</p>
+    </footer>    
+</body>
+</html>
