--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="hero-text-box">
             <h1 class="hero-heading">Creativity like an ocean
                 <p class="hero-text">Surf on wid Shivam Anand</p>
-                <p><button class="hero button">View Protfolio </button></p>
+                <p><button class="hero-button">View Protfolio </button></p>
             </h1>
         </section>
     </header>
