--- a/index.html
+++ b/index.html
@@ -1,68 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/glightbox.min.css">
-    <link rel="stylesheet" href="css/all.min.css">
-    <title>Shivam Anand Homepage</title>
-</head>
-<body class="hero-body">
-    <header class="hero-body">
-        <section class="hero-image-box">
-            <img src="img/gm13.jpg" alt="Image" class="hero-img">
-        <nav class="nav-bar hero-nav">
-            <h1 class="logo"><a href="index.html">Shivam Anand</a></h1>
-            <ul class="nav-menu">
-                <li class="nav-item"><a href="protfolio.html">Portfolio</a></li>
-                <li class="nav-item"><a href="shop.html">shop</a></li>
-                <li class="nav-item"><a href="about.html">about</a></li>
-                <li class="nav-item social-nav-item">
-                    <a href="https://twitter.com/An_Shivam33" aria-label="Link to Twitter">
-                        <i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
-                    </li>
-                <li class="nav-item social-nav-item">
-                    <a href="https://github.com/33Shivam" aria-label="Link to Github">
-                            <i class="fa-brands fa-github" aria-hidden="true"></i></a>
-                        </li>
-                <li class="nav-item social-nav-item">
-                    <a href="https://www.linkedin.com/in/shivam-anand-55779b229/" aria-label="Link To linkedin">
-                                <i class="fa-brands fa-linkedin" aria-hidden="true"></i></a>
-                            </li>
-                </li>
-            </ul>
-        </nav>
-    </section>
-        <section class="hero-text-box">
-            <h1 class="hero-heading">Creativity like an ocean
-                <p class="hero-text">Surf on wid Shivam Anand</p>
-                <p><button class="hero-button">View Protfolio </button></p>
-            </h1>
-        </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/glightbox.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
+    <title>Shivam Anand|Homepage</title>
+  </head>
+  <body class="hero-body">
+    <header class="hero-box">
+      <section class="hero-image-box">
+        <video src="video/Network - 12716.mp4" class="hero-video" autoplay muted loop>
+      </section>
+
+      <nav class="nav-bar hero-nav">
+        <h1 class="logo" style="color:white;">Shivam Anand</h1>
+        <ul class="nav-menu">
+          <li class="nav-item"><a href="about.html">About</a></li>
+          <li class="nav-item social-nav-item">
+            <a href="https://twitter.com/An_Shivam33" aria-label="Link to Twitter"
+              ><i class="fab fa-twitter" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li class="nav-item social-nav-item">
+            <a
+              href="https://www.instagram.com/_an.shivam_/"
+              aria-label="Link to Instagram"
+              ><i class="fab fa-instagram" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li class="nav-item social-nav-item">
+            <a
+              href="https://www.linkedin.com/in/shivam-anand-55779b229/"
+              aria-label="Link to LinkedIn"
+              ><i class="fab fa-linkedin" aria-hidden="true"></i
+            ></a>
+          </li>
+          <li class="nav-item social-nav-item">
+            <a
+              href="https://github.com/33Shivam"
+              aria-label="Link to Github"
+              ><i class="fab fa-github" aria-hidden="true"></i
+            ></a>
+          </li>
+        </ul>
+      </nav>
+      <section class="hero-text-box">
+        <h1 class="hero-heading">Learning never exhausts my mind</h1>
+        <p class="hero-text">
+          BUILD , IMPROVE, REPEAT
+        </p>
+        <p><button class="hero-button"> <a href="paper ieee format (1).pdf" style="color: white; text-decoration: none;" 
+        > View Resume</button></a></p>
+      </section>
     </header>
     <footer>
-        <nav class="nav-bar footer-nav">            
-            <ul class="nav-menu">
-                <li class="nav-item"><a href="protfolio.html">Portfolio</a></li>
-                <li class="nav-item"><a href="shop.html">shop</a></li>
-                <li class="nav-item"><a href="about.html">about</a></li>
-                <h1 class="nav-item logo footer-logo"><a href="index.html">Shivam Anand</a></h1>
-</ul>
-</nav>
-<section class="footer-social">
-    <a href="https://twitter.com/An_Shivam33" aria-label="Link to Twitter">
-        <i class="fa-brands fa-twitter fa-3x" aria-hidden="true"></i></a>  
+      
+      <section class="footer-social">
+        <a href="https://twitter.com/An_Shivam33" aria-label="Link to Twitter"
+          ><i class="fab fa-twitter fa-3x" aria-hidden="true"></i
+        ></a>
+        <a
+          href="https://www.instagram.com/_an.shivam_/"
+          aria-label="Link to Instagram"
+          ><i class="fab fa-instagram fa-3x" aria-hidden="true"></i
+        ></a>
 
-    <a href="https://github.com/33Shivam" aria-label="Link to Github">
-            <i class="fa-brands fa-github fa-3x" aria-hidden="true"></i></a>       
+        <a
+          href="https://www.linkedin.com/in/shivam-anand-55779b229/"
+          aria-label="Link to LinkedIn"
+          ><i class="fab fa-linkedin fa-3x" aria-hidden="true"></i
+        ></a>
 
-    <a href="https://www.linkedin.com/in/shivam-anand-55779b229/" aria-label="Link To linkedin">
-                <i class="fa-brands fa-linkedin fa-3x" aria-hidden="true"></i></a>
-
-</section>
-<p class="footer-copyright">Copyright &copy; 2020</p>
-    </footer>    
-</body>
+        <a href="https://github.com/33Shivam" aria-label="Link to Github"
+          ><i class="fab fa-github fa-3x" aria-hidden="true"></i
+        ></a>
+      </section>
+      <p class="footer-copyright">Copyright &copy; 2022</p>
+    </footer>
+  </body>
 </html>
