--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <p class="hero-text">
           BUILD , IMPROVE, REPEAT
         </p>
-        <p><button class="hero-button"> <a href="RESUME IN PROGRESS.pdf" style="color: white; text-decoration: none;" 
+        <p><button class="hero-button"> <a href="RESUME PDF.pdf" style="color: white; text-decoration: none;" 
         > View Resume</button></a></p>
       </section>
     </header>
